[package]
name = "rs_trading"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
futures-util = "0.3"
url = "2.2"
serde_json = "1.0"
chrono = "0.4"
futures = "0.3"
clap = { version = "4.5.27", features = ["derive"] }
